--- a/src/main/resources/templates/main/layout/main_layout.html
+++ b/src/main/resources/templates/main/layout/main_layout.html
@@ -2,6 +2,8 @@
 날짜 : 2024/10/25
 이름 : 이상훈
 내용 : 메인 페이지 레이아웃 html 생성
+    수정내용
+    - 2024/11/12 이도영 사이드 베스트 상품 제거
 -->
 
 <!DOCTYPE html>
@@ -65,9 +67,9 @@
 
 <div class="layout-container">
     <!-- aside  -->
-    <div class="layout-left">
-        <th:block th:replace="~{layout/aside-best}"></th:block>
-    </div>
+<!--    <div class="layout-left">-->
+<!--        <th:block th:replace="~{layout/aside-best}"></th:block>-->
+<!--    </div>-->
 
     <div class="layout-right">
         <!-- content -->
