--- a/src/main/resources/templates/admin/include/admin_modal.html
+++ b/src/main/resources/templates/admin/include/admin_modal.html
@@ -936,8 +936,8 @@
                         <tr>
                             <th>모집기간</th>
                             <td>
-                                <input type="date" id="displayStartDate" name="displayStartDate"> -
-                                <input type="date" id="displayEndDate" name="displayEndDate"><br>
+                                <input type="date" id="startDate" name="displayStartDate"> -
+                                <input type="date" id="endDate" name="displayEndDate"><br>
                             </td>
                         </tr>
                         <tr>
