--- a/src/main/resources/templates/myPage/include/mypagenav.html
+++ b/src/main/resources/templates/myPage/include/mypagenav.html
@@ -15,7 +15,7 @@
             <li><a th:href="@{/myPage/ordered}">주문<br><span th:text="${orderCount}">0</span></a></li>
             <li><a th:href="@{/myPage/coupon/{uid}(uid=${uid})}">쿠폰<br><span th:text="${couponCount}">0</span></a></li>
             <li><a th:href="@{/myPage/point}">포인트<br><span th:text="${totalAcPoints}">0</span></a></li>
-            <li><a th:href="@{/myPage/qna}">문의<br><span>1</span></a></li>
+            <li><a th:href="@{/myPage/qna}">문의<br><span th:text="${qnaCount}">0</span></a></li>
         </ol>
     </div>
 </nav>
