Fix: 마이페이지 모달이메일수정

--- a/src/main/resources/templates/layout/modal.html
+++ b/src/main/resources/templates/layout/modal.html
@@ -179,7 +179,7 @@
                     <tr>
                         <th>Email</th>
                         <td class="modalemail">
-                            <input type="text" name="email" value="${#}"/>
+                            <input type="text" name="email" value=""/>
                             <input type="hidden" name="prodNo" class="prodNo">
                             <input type="hidden" name="userId" class="userId">
                         </td>
