판매자 회원가입 ui 재수정

--- a/src/main/resources/templates/user/registerSeller.html
+++ b/src/main/resources/templates/user/registerSeller.html
@@ -83,7 +83,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <th>통신판매업번호</th>
+                    <th>통신판매업번호<span class="required">*</span></th>
                     <td>
                         <input type="text" name="e_commerce_registration_part1" id="e_commerce_registration_part1" maxlength="4" style="width: 70px;" /> -
                         <input type="text" name="e_commerce_registration_part2" id="e_commerce_registration_part2" maxlength="5" style="width: 100px;" /> -
