Fix : 고객센터 수정

--- a/src/main/resources/templates/cs/qna/list.html
+++ b/src/main/resources/templates/cs/qna/list.html
@@ -16,7 +16,7 @@
     </nav>
     <section class="list">
         <aside class="cs_sidebar">
-            <h2>자주묻는질문</h2>
+            <h2>문의하기</h2>
             <ul>
                 <li><a th:href="@{/cs/layout/qna/list?type1=회원}">회원</a></li>
                 <li><a th:href="@{/cs/layout/qna/list?type1=쿠폰/이벤트}">쿠폰 / 이벤트</a></li>
