--- a/src/main/resources/static/css/admin/product/edit.css
+++ b/src/main/resources/static/css/admin/product/edit.css
@@ -557,3 +557,28 @@ th, td {
 .add-combination-btn:hover {
     background-color: #005fa3;
 }
+/* edit.css */
+
+.product-save-button {
+    background-color: #4CAF50; /* 버튼 배경색 */
+    color: white; /* 텍스트 색상 */
+    padding: 12px 20px; /* 패딩 */
+    border: none; /* 테두리 제거 */
+    border-radius: 5px; /* 모서리를 둥글게 */
+    cursor: pointer; /* 마우스를 올렸을 때 포인터 커서 */
+    font-size: 16px; /* 텍스트 크기 */
+    font-weight: bold; /* 텍스트 굵기 */
+    margin-top: 20px; /* 상단 여백 */
+    float: right;
+    transition: background-color 0.3s ease; /* 배경색 전환 효과 */
+}
+
+.product-save-button:hover {
+    background-color: #45a049; /* 마우스를 올렸을 때 배경색 */
+}
+
+.product-save-button:active {
+    background-color: #3e8e41; /* 클릭 시 배경색 */
+    box-shadow: 0 5px #666; /* 클릭 시 그림자 효과 */
+    transform: translateY(2px); /* 클릭 시 살짝 내려가는 효과 */
+}
