--- a/src/main/resources/templates/admin/product/edit.html
+++ b/src/main/resources/templates/admin/product/edit.html
@@ -100,7 +100,7 @@
 
                 <!-- 할인된 가격 표시 -->
                 <div class="discount-display">
-                    <p>할인가: <span id="discountedPrice">${product.price * (1 - product.discountRate / 100)}</span>원</p>
+                    <p>할인가: <span id="discountedPrice" th:text="${product.price * (1 - product.discountRate / 100)}"></span>원</p>
                 </div>
             </div>
 
@@ -143,7 +143,7 @@
                     <label for="productImg1" class="upload-label">기본 이미지</label>
                     <div class="image-preview" onclick="document.getElementById('productImg1').click();">
                         <input type="file" id="productImg1" name="productImg1" class="file-input" onchange="previewImage(event, 'previewImg1')">
-                        <img id="previewImg1" th:src="@{|/uploads/product/${product.productImg1}|}" alt="기본 이미지" class="image-display">
+                        <img id="previewImg1" th:src="@{'/' + ${product.productImg1}|}" alt="기본 이미지" class="image-display">
                     </div>
                     <p class="current-image-label">현재 이미지</p>
                 </div>
@@ -153,7 +153,7 @@
                     <label for="productImg2" class="upload-label">목록 이미지</label>
                     <div class="image-preview" onclick="document.getElementById('productImg2').click();">
                         <input type="file" id="productImg2" name="productImg2" class="file-input" onchange="previewImage(event, 'previewImg2')">
-                        <img id="previewImg2" th:src="@{|/uploads/product/${product.productImg2}|}" alt="목록 이미지" class="image-display">
+                        <img id="previewImg2"th:src="@{'/' + ${product.productImg2}|}" alt="목록 이미지" class="image-display">
                     </div>
                     <p class="current-image-label">현재 이미지</p>
                 </div>
@@ -163,7 +163,7 @@
                     <label for="productImg3" class="upload-label">상세 이미지</label>
                     <div class="image-preview" onclick="document.getElementById('productImg3').click();">
                         <input type="file" id="productImg3" name="productImg3" class="file-input" onchange="previewImage(event, 'previewImg3')">
-                        <img id="previewImg3" th:src="@{|/uploads/product/${product.productImg3}|}" alt="상세 이미지" class="image-display">
+                        <img id="previewImg3" th:src="@{'/' + ${product.productImg3}|}" alt="상세 이미지" class="image-display">
                     </div>
                     <p class="current-image-label">현재 이미지</p>
                 </div>
